added buy and sell methods
