# tmp/swagger.yaml
@@ -111,6 +111,12 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Логическая ошибка",
+            "schema": {
+              "$ref": "#/definitions/errorResult"
+            }
+          },
           "401": {
             "description": "Пользователь не аутентифицирован в системе",
             "schema": {
@@ -173,9 +179,29 @@
           "sale"
         ],
         "operationId": "sale",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "description": "Список предметов на продажу",
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/itemSale"
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Логическая ошибка",
+            "schema": {
+              "$ref": "#/definitions/errorResult"
+            }
           },
           "401": {
             "description": "Пользователь не аутентифицирован в системе",
@@ -232,6 +258,25 @@
         },
         "name": {
           "type": "string"
+        }
+      }
+    },
+    "itemSale": {
+      "description": "Предметы на продажу",
+      "type": "object",
+      "properties": {
+        "count": {
+          "type": "integer"
+        },
+        "id": {
+          "type": "string",
+          "format": "uuid"
+        },
+        "name": {
+          "type": "string"
+        },
+        "price": {
+          "type": "number"
         }
       }
     },
